--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/font-awesome.css">
-  <title>PerkinsPainting</title>
-  <base href="/">
-
+  <title>Perkins Painting</title>
+  <base href="/perkins-painting/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
