--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/font-awesome.css">
+  <!-- <link rel="stylesheet" href="css/font-awesome.css"> -->
   <title>Perkins Painting</title>
   <base href="/perkins-painting/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
